@@ -13,7 +13,7 @@
 #define ELINKS_HOMEPAGE			"http://elinks.cz/"
 #define ELINKS_DOC_URL			"http://elinks.cz/documentation/"
 #define ELINKS_BUGS_URL			"http://bugzilla.elinks.cz/"
-#define ELINKS_GITWEB_URL		"http://pasky.or.cz/gitweb.cgi"
+#define ELINKS_GITWEB_URL		"http://repo.or.cz/w/elinks.git"
 
 #define ELINKS_SOCK_NAME		"socket"
 #define ELINKS_PORT			23456
