@@ -3,9 +3,17 @@ by doing
 
 	$ cg log
 
-in a checked out GIT tree, or using the gitweb interface currently
-available at
+in a checked out GIT tree, or using the gitweb interface available at:
 
-	http://pasky.or.cz/gitweb.cgi
+	http://repo.or.cz/w/elinks.git
 
-(to be moved to a nicer location later).
+The data in the main repository reaches back to 2005-09-16, when
+ELinks switched from CVS to GIT.  To see changes made in CVS before
+that, download the history with the contrib/grafthistory.sh script.
+Unfortunately, because files in the CVS repository have been moved or
+copied around, checking out a historical version often places files in
+the wrong directories.  The history is usable for git-blame, however.
+It is currently also viewable at these sites:
+
+	http://pasky.or.cz/gitweb.cgi?p=elinks-history.git
+	http://cvsweb.elinks.cz/cvsweb.cgi/elinks/
